exception handling commit